--- a/0_Erste_Schritte_HS25.ipynb
+++ b/0_Erste_Schritte_HS25.ipynb
@@ -5,7 +5,7 @@
    "id": "455b9fe6",
    "metadata": {},
    "source": [
-    "# LSG Erste Schritte"
+    "# Erste Schritte"
    ]
   },
   {
@@ -26,10 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "12ae81fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hallo Welt\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hallo Welt\")"
    ]
@@ -109,20 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c5fd05e4-1984-4360-b75e-e9d94db13290",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bonjour, tout le monde!\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9eacd04-49ea-4ce5-bf8e-033074a41720",
+   "metadata": {},
    "source": [
-    "print(\"Bonjour, tout le monde!\")"
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "  <pre><code class=\"language-python\">\n",
+    "print(\"Bonjour, tout le monde\")\n",
+    "  </code></pre>\n",
+    "</details>\n"
    ]
   },
   {
@@ -144,20 +155,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d171cb87",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Durchsage\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca420c54-d845-4219-a1db-83a6f039f440",
+   "metadata": {},
    "source": [
-    "print(\"Du\"+\"rchsage\")"
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "  <pre><code class=\"language-python\">\n",
+    "print(\"Du\"+\"rchsage\")\n",
+    "  </code></pre>\n",
+    "</details>"
    ]
   },
   {
@@ -180,20 +194,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d2791cea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "KZIKZIKZI\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c112e9bc-e523-4c02-bec7-cd810e265a65",
+   "metadata": {},
    "source": [
-    "print(3*\"KZI\")"
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "  <pre><code class=\"language-python\">\n",
+    "print(10000*\"Max Mustermann\")\n",
+    "  </code></pre>\n",
+    "</details>"
    ]
   },
   {
@@ -205,12 +222,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "973f86b2-dc22-4717-8da8-40e1599c669f",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c481cc88",
    "metadata": {},
-   "source": [
-    "Der Server überlastet und das Programm bricht ab."
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -239,22 +256,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e6af1909",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kantonsschule\n",
-      "Zimmerberg\n",
-      "2023\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "829fa941-ec3a-4c06-8435-29453ad29c8c",
+   "metadata": {},
    "source": [
-    "print(\"Kantonsschule\\nZimmerberg\\n2023\")"
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "  <pre><code class=\"language-python\">\n",
+    "print(\"Kantonsschule\\nZimmerberg\\n2023\")\n",
+    "  </code></pre>\n",
+    "</details>"
    ]
   },
   {
@@ -275,20 +293,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1713e954-1e00-42d6-bb15-1fef21d97008",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5eec6add-6b2a-4752-8f7e-3628b025eb6c",
+   "metadata": {},
    "source": [
-    "print(3+4)"
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "  <pre><code class=\"language-python\">\n",
+    "print(3+4)\n",
+    "  </code></pre>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6a402bf-dec8-44ce-b66c-16dc7abad8e8",
+   "metadata": {},
+   "source": [
+    "# Zusatzaufgaben:"
    ]
   },
   {
@@ -296,7 +325,7 @@
    "id": "ae73cafc-a5a0-434e-ad55-f26c0eda9f7d",
    "metadata": {},
    "source": [
-    "### Aufgabe 6"
+    "### Aufgabe 1"
    ]
   },
   {
@@ -308,21 +337,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "10150496-e00d-40c3-afe6-cad30b7dfd1e",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75aae94a-62c8-431d-98d7-47f3d2bdcac8",
    "metadata": {},
-   "source": [
-    "\t•\tLOC umfasst alle Zeilen im Code, einschließlich Kommentare und Leerzeilen.\n",
-    "\t•\tSLOC zählt nur die tatsächlichen Codezeilen und ist eine präzisere Metrik für Softwaregröße und -komplexität.\n",
-    " Bei Minecraft ca. 200000-400000"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "e267f781-1086-4f56-b530-d0fa87189f8e",
    "metadata": {},
    "source": [
-    "### Aufgabe 7"
+    "### Aufgabe 2"
    ]
   },
   {
@@ -336,21 +363,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "3e5eef2d-e672-49f0-b8fb-234ab3dbe980",
+   "execution_count": null,
+   "id": "b749e6f2-500e-4ea0-8cbb-d4f02434c186",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. \n",
-      "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48a17d39-d5f9-485a-ad01-6f0219469f69",
+   "metadata": {},
    "source": [
-    "print(\"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. \\nLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.\")\n"
+    "# Zusammenfassung:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1262b4c1-4681-4be2-866d-b20580d54402",
+   "metadata": {},
+   "source": [
+    "In diesem Kapitel wurden folgende zentrale Konzepte eingeführt:\n",
+    "\n",
+    "- **`print()`** – Gibt Text oder Werte in der Konsole aus.\n",
+    "- **`+`** – Bei Zahlen: Addition; bei Strings: Aneinanderhängen (Konkatenation).\n",
+    "- **`*`** – Bei Zahlen: Multiplikation; bei Strings: Wiederholung.\n",
+    "- **Zeilenumbruch `\\n`** – Trennt Text in eine neue Zeile.\n"
    ]
   }
  ],
