--- a/1_Variablen_HS25.ipynb
+++ b/1_Variablen_HS25.ipynb
@@ -179,6 +179,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba6dd17e-2a83-41f6-a27c-7948e55b2436",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "first = 2\n",
+    "second = 3\n",
+    "third = first * second\n",
+    "second = third - first\n",
+    "first = first + second + third\n",
+    "third = second * first\n",
+    "      \n",
+    "print(first,second,third)\n",
+    "  </code></pre>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7203d60b",
    "metadata": {},
    "source": [
@@ -212,6 +233,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27a1ad53-2e1f-45ce-b57c-8ccc7f737ce5",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "Da die Variable vor ihrer Deklaration aufgerufen wird. Die Zeilen müssen vertauscht werden.\n",
+    "  </code></pre>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "411ae025",
    "metadata": {},
    "source": [
@@ -219,11 +254,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab63705c",
+   "cell_type": "markdown",
+   "id": "ed96cc92-0e77-468f-8b77-823d7a2184b1",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Wieso gibt folgdender Code eine Fehlermeldung aus?"
    ]
@@ -249,6 +282,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a2b96fda-1a8e-4650-96f0-93c0c864f140",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "Wir können keine Zuweisungen der Form 4 = x machen, da \"4\" kein gültiger Name einer Variable ist.\n",
+    "  </code></pre>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d26918ee",
    "metadata": {},
    "source": [
@@ -256,19 +303,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9fbbd20e",
+   "cell_type": "markdown",
+   "id": "7a7fc4ef-f775-4593-a850-64977398a5c4",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Berechnen Sie von Hand, was der Wert der Variablen am Ende des folgenden Codes sein wird:\n",
+    "Berechnen Sie von Hand, was der Wert der Variable am Ende des folgenden Codes sein wird:\n",
     "    \n",
     "    x = 10\n",
     "    x = x + x\n",
     "    x = x - 5\n",
     "    x = x * 2\n",
     "    x = x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "457e7389-dad7-4c33-8859-d9f4a10cadd5",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1028954f-6632-4231-9fb3-0084ebc804f0",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "x = 30\n",
+    "  </code></pre>\n",
+    "</details>"
    ]
   },
   {
@@ -308,6 +373,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5740a323-20e8-434d-a639-bfd075cea3be",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "p = input(\"Anzahl Personen\")\n",
+    "\n",
+    "k = p\n",
+    "s = 2 * p\n",
+    "k = 2 * p\n",
+    "z = 10 * p\n",
+    "\n",
+    "print(p,s,k,z)\n",
+    "  </code></pre>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "862b8985",
    "metadata": {},
    "source": [
@@ -331,6 +417,32 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e33d871-b3aa-46b0-8371-b734a2730745",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "# Lösung 1:\n",
+    "\n",
+    "x = 10\n",
+    "y = 5\n",
+    "z = y\n",
+    "y = x\n",
+    "x = z\n",
+    "\n",
+    "# Lösung 2: (Kompakter)\n",
+    "x = 10\n",
+    "y = 5\n",
+    "x = y, y = x\n",
+    "print(x,y)\n",
+    "  </code></pre>\n",
+    "</details>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -358,6 +470,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2e00a3e6-00ae-43f5-83dc-158195763084",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "name = input(\"Name:\")\n",
+    "print(\"Hallo\",name)\n",
+    "# Variante 2:\n",
+    "print(\"Hallo \" + name\")\n",
+    "  </code></pre>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9800fa3e-6aa4-488b-8970-7a5f1408f6ec",
    "metadata": {},
    "source": [
@@ -369,7 +498,7 @@
    "id": "5ec8facb-16ba-4913-9408-892b7f66f579",
    "metadata": {},
    "source": [
-    "Schreiben Sie ein Programm, welches Sie nach 4 Zahlen fragt, und ihnen anschliessend die Differenz und die Summe dieser vier Zahlen ausgibt."
+    "Schreiben Sie ein Programm, welches Sie nach 4 Zahlen fragt, und ihnen anschliessend die Differenz (a-b-c-d) und die Summe dieser vier Zahlen ausgibt."
    ]
   },
   {
@@ -379,6 +508,54 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "437d23bc-950b-46b5-8aef-12d2f43d4843",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "a = input(\"Zahl 1\")\n",
+    "b = input(\"Zahl 2\")\n",
+    "c = input(\"Zahl 3\")\n",
+    "d = input(\"Zahl 4\")\n",
+    "\n",
+    "print(\"Summe\", a+b+c+d)\n",
+    "print(\"Differenz\",a-b-c-d)\n",
+    "  </code></pre>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2643af39-725d-48d0-9e22-8de0942cb66b",
+   "metadata": {},
+   "source": [
+    "# Zusammenfassung"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3bd7a4d-e786-4cab-83c6-a852cee51794",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e66a930-126a-40a6-9543-54d9edb341dc",
+   "metadata": {},
+   "source": [
+    "In diesem Kapitel wurden folgende zentrale Konzepte eingeführt und geübt:\n",
+    "\n",
+    "- **Variable** – Ein benannter Speicherplatz für Daten.\n",
+    "- **Zuweisung (`=`)** – Weist einer Variablen einen Wert zu.\n",
+    "- **`print()`** – Gibt Werte oder Text auf der Konsole aus.\n",
+    "- **`input()`** – Liest Benutzereingaben als String ein.\n",
+    "- **Operatoren** – Mathematische (`+ - * / // %`) oder String-Operatoren.\n"
+   ]
   }
  ],
  "metadata": {
