--- a/2_Aufgaben_HS25.ipynb
+++ b/2_Aufgaben_HS25.ipynb
@@ -26,22 +26,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a6b53170",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "28\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77dc893f-eb91-42ea-85fd-7940ec092f04",
+   "metadata": {},
    "source": [
-    "jahrgang = 1995\n",
-    "alter = 2023 - jahrgang\n",
-    "print(alter)"
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "  <pre><code class=\"language-python\">\n",
+    "jahrgang = 1980\n",
+    "alter = 2025-jahrgang\n",
+    "print(\"Alter:\",alter)\n",
+    "  </code></pre>\n",
+    "</details>"
    ]
   },
   {
@@ -63,18 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6eace10b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rheinschifffahrtspolizeiverordnung\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = \"zeivero\"\n",
     "b = \"ahr\"\n",
@@ -84,7 +79,21 @@
     "f = \"rdnung\"\n",
     "g = \"tspoli\"\n",
     "h = \"nschi\"\n",
-    "print(d+e+h+c+b+g+a+f)"
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44359dcc-7c81-474f-97eb-392a0663a6c6",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "print(d+e+h+c+b+g+a+f)\n",
+    "  </code></pre>\n",
+    "</details>"
    ]
   },
   {
@@ -110,23 +119,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6239a031",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Der Schnitt beträgt 4.0.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6edd75e8-b37a-4746-a305-07ddba80f2b6",
+   "metadata": {},
    "source": [
-    "note_1 = 4.2\n",
-    "note_2 = 3.8\n",
-    "schnitt = (note_1+note_2)/2\n",
-    "print(f\"Der Schnitt beträgt {schnitt}.\")\n"
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "note_1 = 4.6\n",
+    "note_2 = 5.1\n",
+    "schnitt = (note_1 + note_2)/2\n",
+    "print(schnitt)\n",
+    "  </code></pre>\n",
+    "</details>"
    ]
   },
   {
@@ -147,25 +160,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c0b861b9",
+   "execution_count": null,
+   "id": "a4c3a3ff-f2c6-475d-b9f4-4fd38d5d3df8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Der Schnitt beträgt 3.375.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55fae0a9-4286-4445-ace8-5e72775611cd",
+   "metadata": {},
    "source": [
-    "note_1 = 4.2\n",
-    "note_2 = 3.8\n",
-    "note_3 = 3.1\n",
-    "note_4 = 2.4\n",
-    "schnitt = (note_1+note_2+note_3+note_4)/4\n",
-    "print(f\"Der Schnitt beträgt {schnitt}.\")"
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "note_1 = 4.6\n",
+    "note_2 = 5.1\n",
+    "note_3 = 3.8\n",
+    "note_4 = 5.2\n",
+    "schnitt = (note_1 + note_2 + note_3 + note_4)/4\n",
+    "print(schnitt)\n",
+    "  </code></pre>\n",
+    "</details>"
    ]
   },
   {
@@ -191,27 +208,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "10ee7845",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "142.5 45.0 30 13000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 20\n",
     "b = 5\n",
+    "c = 130"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7815d97-3709-4dc3-8dbc-642bf60c336e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e0af179-c9b5-4936-b534-412a8e12e431",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "a = 20\n",
+    "b = 5\n",
     "c = 130\n",
+    "\n",
     "d = (a+b)/2+c\n",
-    "e = c/2-a\n",
+    "e = c/2 - a\n",
     "f = a + 2*b\n",
-    "g = a*b*c\n",
-    "print(d,e,f,g)"
+    "g = a * b * c\n",
+    "\n",
+    "print(d,e,f,g)\n",
+    "  </code></pre>\n",
+    "</details>"
    ]
   },
   {
@@ -227,12 +262,12 @@
    "id": "cec86745",
    "metadata": {},
    "source": [
-    "Ändern Sie die Variabel x so ab, damit das Ergebnis 2023 ergibt:"
+    "Ändern Sie die Variabel x so ab, damit das Ergebnis 2025 ergibt:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "13562437",
    "metadata": {},
    "outputs": [
@@ -240,14 +275,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023\n"
+      "1999\n"
      ]
     }
    ],
    "source": [
-    "x = 24\n",
-    "result = (1999 + x)%2024\n",
+    "x = 0\n",
+    "result = (1999 + x)%2026\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b496fcb-caa5-454a-8f4f-afa10f69c7df",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "x = 26\n",
+    "  </code></pre>\n",
+    "</details>"
    ]
   },
   {
@@ -277,49 +326,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "50088a36",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4003433461.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    temp_f = temp_c * (1.8 + 32)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "temp_c = float(input(\"Grad: \")\n",
+    "temp_c = float(input(\"Grad: \"))\n",
     "temp_f = temp_c * (1.8 + 32)\n",
     "print(f\"Es ist {temp_f} Grad Celsius oder {temp_c} Grad Fahrenheit.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "18cfb75c",
+   "execution_count": null,
+   "id": "ef3902be",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Grad: 0\n",
-      "Es ist 0.0 Grad Celsius oder 32.0 Grad Fahrenheit.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3262b72b-2ec3-47d7-9a17-9a263751b5c5",
+   "metadata": {},
    "source": [
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
     "temp_c = float(input(\"Grad: \"))\n",
-    "temp_f = (temp_c * 1.8) + 32\n",
-    "print(f\"Es ist {temp_c} Grad Celsius oder {temp_f} Grad Fahrenheit.\")"
+    "temp_f = temp_c * 1.8 + 32\n",
+    "print(f\"Es ist {temp_c} Grad Celsius oder {temp_f} Grad Fahrenheit.\")\n",
+    "</code></pre>\n",
+    "</details>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15fc0ec2-e66a-460d-a15d-e8deff84bb2a",
+   "id": "286dd834-1d14-47c1-b0d9-b7fee6905a90",
    "metadata": {},
    "source": [
     "### Aufgabe 7:"
@@ -327,115 +370,67 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39f761ab-e3a3-4c19-b797-8f2dabe18454",
+   "id": "b0f0f0ee-37e6-484f-be8b-bf67de9878b5",
    "metadata": {},
    "source": [
-    "Schreibe ein eigenes Programm, um den Unterschied folgender Befehle herauszufinden:\n",
+    "Schreiben Sie ein eigenes Programm, um den Unterschied folgender Befehle rauszufinden:\n",
+    "\n",
     "\n",
     "int(x),float(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "0812b5a4-394b-46e9-a172-01ca51666c7b",
+   "execution_count": null,
+   "id": "10e86028-8dd5-4bbe-9237-b0db0f1f10cc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.8\n",
-      "5\n",
-      "5.8\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f041990-300a-46c3-96e6-90a555f70eeb",
+   "metadata": {},
    "source": [
-    "x = 5.8\n",
-    "print(x)\n",
-    "print(int(x))    # Macht eine Ganzzahl aus x\n",
-    "print(float(x))  # Macht eine Fliesskommazahl aus x"
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "int() wird verwendet, um Ganze Zahlen zu speichern.\n",
+    "float() wird verwendet, um Kommazahlen zu speichern.\n",
+    "</code></pre>\n",
+    "</details>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6d7a2080-7ebf-4399-9a20-1fb922b54ec2",
+   "id": "b9891da5-4b34-42ec-be1f-208781a83bee",
    "metadata": {},
    "source": [
-    "Wir brauchen int(x) ebenfalls, um aus einer Zeichenkette (z.B aus einem Input) eine Zahl zu machen:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "318fafcd-5155-4be4-af42-e850944cb7de",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Gib mir eine Zahl 3\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"int\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m zahl \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGib mir eine Zahl\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mzahl\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
-     ]
-    }
-   ],
-   "source": [
-    "zahl = input(\"Gib mir eine Zahl\")\n",
-    "print(zahl+1)"
+    "# Zusammenfassung"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "580baad1-fd57-450f-aec0-777f7876dcc3",
+   "id": "ae54035f-915a-4a36-9c21-48e005dfab0f",
    "metadata": {},
    "source": [
-    "Dies erzeug einen Error, da Python hier versucht, eine Zeichenkette mit einer Zahl zu summieren. Wir müssen den Input erst in eine Zahl verwandeln, um die Addition ausführen zu können:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "2b3a7b6b-f04d-49d4-86da-f04595044b71",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Gib mir eine Zahl 8\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Das Ergebnis ist 9\n"
-     ]
-    }
-   ],
-   "source": [
-    "zahl = int(input(\"Gib mir eine Zahl\"))\n",
-    "print(f\"Das Ergebnis ist {zahl+1}\")"
+    "In diesem Kapitel wurden folgende zentrale Konzepte eingeführt oder geübt:\n",
+    "\n",
+    "- **Variable** – Ein benannter Speicherplatz für Daten.\n",
+    "- **Datentyp** – Bestimmt die Art der gespeicherten Werte (z. B. Zahl, Text, Wahrheitswert).\n",
+    "- **String (`str`)** – Zeichenkette in Anführungszeichen, z. B. `'Hallo'`.\n",
+    "- **Integer (`int`)** – Ganzzahlen ohne Komma.\n",
+    "- **Float (`float`)** – Kommazahlen, z. B. `3.14`.\n",
+    "- **`print()`** – Gibt Werte oder Text auf der Konsole aus.\n",
+    "- **`input()`** – Liest Benutzereingaben als String ein.\n",
+    "- **Operatoren** – Mathematische (`+ - * / `) oder String-Operatoren."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcbbb79e-3bf0-48fd-8930-e9ba5bca1ead",
+   "id": "b0e71a6a-8926-421b-a5f0-1cb71d5ed110",
    "metadata": {},
    "outputs": [],
    "source": []
